--- a/css/gridstyle.css
+++ b/css/gridstyle.css
@@ -1,3 +1,9 @@
+.wrapper{
+	max-width: 80%;
+	margin: 0 auto;
+}
+.container{
+	display: grid;
 	grid-template-areas: 
 	"header header"
 	"main aside"
